@@ -1,3 +1,12 @@
+2001-02-23  Bruno Haible  <haible@clisp.cons.org>
+
+        * src/iconv.c [DJGPP]: Include <io.h>.
+          (SET_BINARY) [O_BINARY]: New macro.
+          (usage): Mention --binary if available.
+          (convert): Use SET_BINARY instead of setmode.
+          (main): Likewise.
+          Reported by Juan Manuel Guerrero <st001906@hrz1.hrz.tu-darmstadt.de>.
+
 2001-02-25  Bruno Haible  <haible@clisp.cons.org>
 
 	* autoconf/ltconfig:
